--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -49,10 +49,10 @@ layout: default
     {%- endif %}
 
     <!-- Latest posts -->
-    {% if page.latest_posts -%}
+    <!-- {% if page.latest_posts -%}
     <h2><a href="{{ '/blog/' | relative_url }}" style="color: inherit;">Latest Posts</a></h2>
     {%- include latest_posts.html %}
-    {%- endif %}
+    {%- endif %} -->
 
     <!-- Selected papers -->
     {% if page.selected_papers -%}
